--- a/DiscountApp.ConsoleClient/DiscountApp.ConsoleClient.csproj
+++ b/DiscountApp.ConsoleClient/DiscountApp.ConsoleClient.csproj
@@ -9,6 +9,7 @@
     <Protobuf Include="Protos\discount.proto" GrpcServices="Client" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Google.Protobuf" Version="3.25.3" />
     <PackageReference Include="Grpc.Net.Client" Version="2.61.0" />
     <PackageReference Include="Grpc.Tools" Version="2.62.0">
